--- a/environment/Vagrantfile
+++ b/environment/Vagrantfile
@@ -5,11 +5,11 @@ Vagrant.configure(2) do |config|
   config.vm.box = "debian/jessie64"
 
   config.vm.define "munin" do |sut|
-    config.vm.network "private_network", ip: "10.0.1.10"
+    config.vm.network "public_network"
   end
 
   config.vm.define "app" do |sut|
-    config.vm.network "private_network", ip: "10.0.1.20"
+    config.vm.network "public_network"
   end
 
   config.vm.provision "ansible" do |ansible|
