--- a/environment/roles/apt/tasks/main.yml
+++ b/environment/roles/apt/tasks/main.yml
@@ -2,4 +2,4 @@
 - name: update cache
   apt:
     update_cache: yes
-    cache_valid_time: "{{ apt_cache_valid_time | int }}"
+    #    cache_valid_time: "{{ apt_cache_valid_time | int }}"
